# transformer-pytorch

./: .gitignore  README.md  main.py  pyproject.toml  train.py
.github/workflows/: python-test.yaml
src/: train.py
src/transformer/: decoder.py  positional_encoding.py
tests/: test_attention.py  test_posenc.py
transformer/: attention.py  decoder_layer.py  encoder.py  encoder_layer.py  ffn.py  input_embeddings.py  layer_norm.py  positional_encoding.py  transformer.py
