[project]
name = "transformer"
version = "0.1"
description = "Attention Is All You Need"
authors = [
  { name = "Richard Hsieh", email = "rzhsieh@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }

keywords = [
  'machine learning',
  'artificial intelligence',
  'transformers'
]

dependencies = [
  "torch>=2.6"
]

[project.urls]
Repository = "https://github.com/richsi/transformer-pytorch"

[project.optional-dependencies]
test = [
  "pytest"
]